Library/AXL(Library)/Delphi/AXDev.pas


unit AXDev;

interface

uses Windows, Messages, AXHS;



// Use Board Number and find Board Address
function AxlGetBoardAddress (lBoardNo : LongInt; upBoardAddress : PDWord) : DWord; stdcall;
// Use Board Number and find Board ID
function AxlGetBoardID (lBoardNo : LongInt; dwpBoardID : PDWord) : DWord; stdcall;
// Use Board Number and find Board Version
function AxlGetBoardVersion (lBoardNo : LongInt; dwpBoardVersion : PDWord) : DWord; stdcall;
// Use Board Number/Module Position and find Module ID
function AxlGetModuleID (lBoardNo : LongInt; lModulePos : LongInt; dwpModuleID : PDWord) : DWord; stdcall;
// Use Board Number/Module Position and find Module Version
function AxlGetModuleVersion (lBoardNo : LongInt; lModulePos : LongInt; dwpModuleVersion : PDWord) : DWord; stdcall;

function AxlGetModuleNodeInfo(lBoardNo : LongInt; lModulePos : LongInt; lpNetNo : PLongInt; dwpNodeAddr : PDWord) : DWord; stdcall;


// Only for PCI-R1604[RTEX]
// Writing user data to embedded flash memory
// lPageAddr(0 ~ 199)
// lByteNum(1 ~ 120)
// Note) Delay time is required for completing writing operation to Flash(Max. 17mSec)
function AxlSetDataFlash (lBoardNo : LongInt; lPageAddr : LongInt; lBytesNum : LongInt; bpSetData : PByte) : DWord; stdcall;



// ML3 Only, Use Board and Set the EStopInterLock Parameter
// dwInterLock    : (0) Not use(Default value)
//                  (1) Using function. When E-STOP signal is externally applied after setting function, E-STOP drive command is executed to the motion control node connected to the board.
// dwDigFilterVal : Setting range of input filter constant (1~40). Unit communication Cyclic time
// Set EstopInterLock function by using dwInterLock and dwDigFilterVal on Board
function AxlSetEStopInterLock (lBoardNo : LongInt; dwInterLock : DWord; dwDigFilterVal : DWord) : DWord; stdcall;
// ML3 Only, Use Board and Get the EStopInterLock Parameter
function AxlGetEStopInterLock (lBoardNo : LongInt; dwpInterLock : PDWord; dwpDigFilterVal : PDWord) : DWord; stdcall;
// ML3 Only, Read the External ESTOP Signal status
function AxlReadEStopInterLock (lBoardNo : LongInt; dwpInterLock : PDWord) : DWord; stdcall;


// Reading datas from embedded flash memory
// lPageAddr(0 ~ 199)
// lByteNum(1 ~ 120)
function AxlGetDataFlash (lBoardNo : LongInt; lPageAddr : LongInt; lBytesNum : LongInt; bpSetData : PByte) : DWord; stdcall;


// Use Board Number/Module Position and find AIO Module Number
function AxaInfoGetModuleNo (lBoardNo : LongInt; lModulePos : LongInt; lpModuleNo : PLongInt) : DWord; stdcall;
// Use Board Number/Module Position and find DIO Module Number
function AxdInfoGetModuleNo (lBoardNo : LongInt; lModulePos : LongInt; lpModuleNo : PLongInt) : DWord; stdcall;


// IPCOMMAND Setting at an appoint axis
function AxmSetCommand (lAxisNo : LongInt; sCommand : Byte) : DWord; stdcall;
// 8bit IPCOMMAND Setting at an appoint axis
function AxmSetCommandData08 (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 8bit IPCOMMAND at an appoint axis
function AxmGetCommandData08 (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;
// 16bit IPCOMMAND Setting at an appoint axis
function AxmSetCommandData16 (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 16bit IPCOMMAND at an appoint axis
function AxmGetCommandData16 (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;
// 24bit IPCOMMAND Setting at an appoint axis
function AxmSetCommandData24 (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 24bit IPCOMMAND at an appoint axis
function AxmGetCommandData24 (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;
// 32bit IPCOMMAND Setting at an appoint axis
function AxmSetCommandData32 (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 32bit IPCOMMAND at an appoint axis
function AxmGetCommandData32 (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;


// QICOMMAND Setting at an appoint axis
function AxmSetCommandQi (lAxisNo : LongInt; sCommand : Byte) : DWord; stdcall;
// 8bit QICOMMAND Setting at an appoint axis
function AxmSetCommandData08Qi (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 8bit QICOMMAND at an appoint axis
function AxmGetCommandData08Qi (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;
// 16bit QICOMMAND Setting at an appoint axis
function AxmSetCommandData16Qi (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 16bit QICOMMAND at an appoint axis
function AxmGetCommandData16Qi (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;
// 24bit QICOMMAND Setting at an appoint axis
function AxmSetCommandData24Qi (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 24bit QICOMMAND at an appoint axis
function AxmGetCommandData24Qi (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;
// 32bit QICOMMAND Setting at an appoint axis
function AxmSetCommandData32Qi (lAxisNo : LongInt; sCommand : Byte; dwData : DWord) : DWord; stdcall;
// Get 32bit QICOMMAND at an appoint axis
function AxmGetCommandData32Qi (lAxisNo : LongInt; sCommand : Byte; dwpData : PDWord) : DWord; stdcall;


// Get Port Data at an appoint axis - IP
function AxmGetPortData(lAxisNo : LongInt; wOffset : WORD; dwpData : PDWord) : DWord; stdcall;
// Port Data Setting at an appoint axis - IP
function AxmSetPortData(lAxisNo : LongInt; wOffset : WORD; dwData : DWord) : DWord; stdcall;

// Get Port Data at an appoint axis - QI
function AxmGetPortDataQi(lAxisNo : LongInt; wOffset : WORD; dwpData : PDWord) : DWord; stdcall;
// Port Data Setting at an appoint axis - QI
function AxmSetPortDataQi(lAxisNo : LongInt; wOffset : WORD; dwData : DWord) : DWord; stdcall;


// Set the script at an appoint axis.  - IP
// sc    : Script number (1 - 4)
// event : Define an event SCRCON to happen.
//         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
// cmd   : Define a selection SCRCMD however we change any content
// data  : Selection to change any Data.
function AxmSetScriptCaptionIp(lAxisNo : LongInt; lScriptNo : LongInt; dwEvent : DWord; dwData : DWord) : DWord; stdcall;
// Return the script at an appoint axis.  - IP
function AxmGetScriptCaptionIp(lAxisNo : LongInt; lScriptNo : LongInt; dwEvent : PDWord; dwpData : PDWord) : DWord; stdcall;

// Set the script at an appoint axis.  - QI
// sc    : Script number (1 - 4)
// event : Define an event SCRCON to happen.
//         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
// cmd   : Define a selection SCRCMD however we change any content
// data  : Selection to change any Data.
function AxmSetScriptCaptionQi(lAxisNo : LongInt; lScriptNo : LongInt; dwEvent : DWord; dwCmd : DWord; dwData : DWord) : DWord; stdcall;
// Return the script at an appoint axis. - QI
function AxmGetScriptCaptionQi(lAxisNo : LongInt; lScriptNo : LongInt; dwpEvent : PDWord; dwpCmd : PDWord; dwpData : PDWord) : DWord; stdcall;

// Clear orders a script inside Queue Index at an appoint axis
// uSelect IP.
// uSelect(0): Script Queue Index Clear.
//        (1): Caption Queue Index Clear.
// uSelect QI.
// uSelect(0): Script Queue 1 Index Clear.
//        (1): Script Queue 2 Index Clear.
function AxmSetScriptCaptionQueueClear(lAxisNo : LongInt; dwSelect : DWord) : DWord; stdcall;

// Return Index of a script inside Queue at an appoint axis.
// dwSelect IP
// dwSelect(0): Read Script Queue Index
//        (1): Read Caption Queue Index
// dwSelect QI.
// dwSelect(0): Read Script Queue 1 Index
//        (1): Read Script Queue 2 Index
function AxmGetScriptCaptionQueueCount(lAxisNo : LongInt; dwpData : PDWord; dwSelect : DWord) : DWord; stdcall;

// Return Data number of a script inside Queue at an appoint axis.
// dwSelect IP
// dwSelect(0): Read Script Queue Data
//        (1): Read Caption Queue Data
// dwSelect QI.
// dwSelect(0): Read Script Queue 1 Data
//        (1): Read Script Queue 2 Data
function AxmGetScriptCaptionQueueDataCount(lAxisNo : LongInt; dwpData : PDWord; dwSelect : DWord) : DWord; stdcall;

// Read an inside data.
function AxmGetOptimizeDriveData(lAxisNo : LongInt; dMinVel : Double; dVel : Double; dAccel : Double; dDecel : Double;


// Setting up confirmes the register besides within the board by Byte.
function AxmBoardWriteByte(lBoardNo : LongInt; wOffset : Word; byData : Byte) : DWord; stdcall;
function AxmBoardReadByte(lBoardNo : LongInt; wOffset : Word; bypData : PByte) : DWord; stdcall;

// Setting up confirmes the register besides within the board by Word.
function AxmBoardWriteWord(lBoardNo : LongInt; wOffset : Word; wData : Word) : DWord; stdcall;
function AxmBoardReadWord(lBoardNo : LongInt; wOffset : Word; wpData : PWord) : DWord; stdcall;

// Setting up confirmes the register besides within the board by DWord.
function AxmBoardWriteDWord(lBoardNo : LongInt; wOffset : Word; dwData : DWord) : DWord; stdcall;
function AxmBoardReadDWord(lBoardNo : LongInt; wOffset : Word; dwpData : PDWord) : DWord; stdcall;

// Setting up confirmes the register besides within the Module by Byte.
function AxmModuleWriteByte(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; byData : Byte) : DWord; stdcall;
function AxmModuleReadByte(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; bypData : PByte) : DWord; stdcall;

// Setting up confirmes the register besides within the Module by Word.
function AxmModuleWriteWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; wData : Word) : DWord; stdcall;
function AxmModuleReadWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; wpData : PWord) : DWord; stdcall;

// Setting up confirmes the register besides within the Module by DWord.
function AxmModuleWriteDWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; dwData : DWord) : DWord; stdcall;
function AxmModuleReadDWord(lBoardNo : LongInt; lModulePos : LongInt; wOffset : Word; dwpData : PDWord) : DWord; stdcall;

// Set EXCNT (Pos = Unit)
function AxmStatusSetActComparatorPos(lAxisNo : LongInt; dPos : Double) : DWord; stdcall;
// Return EXCNT (Positon = Unit)
function AxmStatusGetActComparatorPos(lAxisNo : LongInt; dpPos : PDouble) : DWord; stdcall;

// Set INCNT (Pos = Unit)
function AxmStatusSetCmdComparatorPos(lAxisNo : LongInt; dPos : Double) : DWord; stdcall;
// Return INCNT (Pos = Unit)
function AxmStatusGetCmdComparatorPos(lAxisNo : LongInt; dpPos : PDouble) : DWord; stdcall;

//=========== Append function. =================================================
// Increase a straight line interpolation at speed to the infinity.
// Must put the distance speed rate.
function AxmLineMoveVel(lCoord : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

//========= Sensor drive API( Read carefully: Available only PI , No function in QI)
// Set mark signal( used in sensor positioning drive)
function AxmSensorSetSignal(lAxisNo : LongInt; dwLevel : DWord) : DWord; stdcall;
// Verify mark signal( used in sensor positioning drive)
function AxmSensorGetSignal(lAxisNo : LongInt; dwpLevel : PDWord) : DWord; stdcall;
// Verify mark signal( used in sensor positioning drive)state
function AxmSensorReadSignal(lAxisNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;

// Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop. Applied motion is started upon the start of API, and escapes from the API after the motion is completed.
function AxmSensorMovePos(lAxisNo : LongInt; dPos : Double; dVel : Double; dAccel : Double; dDecel : Double; lMethod : LongInt) : DWord; stdcall;
